# Estacao-Meterologica-RESTIC37

./: CMakeLists.txt  estacao_metereo.c  html.h  lwipopts.h  ws2812b.pio
lib/: html.h  ws2812b.c  ws2812b.h
